# apfs-fastindex

./: .gitignore  .gitmodules  Cargo.toml  README.md  appcast.xml  build-native.sh  make-release.sh  spec.md
.github/workflows/: ci.yml  release.yml
app/: Package.swift  README.md  app.entitlements  make-app.sh  sparkle-public-key.txt
app/.build/: build.db  plugin-tools.yaml
app/ApfsFastindex.app/Contents/: Info.plist
app/Sources/ApfsCore/: DisplaySanitizer.swift  PathContainment.swift
app/Sources/ApfsFastindex/: AdminSession.swift  ApfsFastindexApp.swift  BridgeProtocol.swift  CheckForUpdatesView.swift  ContentView.swift  NativeBridge.swift  NativeContentView.swift  PrivilegedScan.swift  ScanController.swift  SettingsView.swift  SnapshotDetect.swift  TCCAccess.swift  TreemapView.swift  UpdaterDelegate.swift  VizPalette.swift  VizWebView.swift
app/Sources/CApfsFastindex/: module.modulemap
app/Tests/ApfsFastindexTests/: main.swift
app/Tests/ApfsUpdateTests/: main.swift
crates/apfs-fastindex/: Cargo.toml  build.rs  cbindgen.toml
crates/apfs-fastindex/examples/: bench_search.rs  diag_smoke.rs  perf_probe.rs  sizes_probe.rs
crates/apfs-fastindex/include/: apfs_fastindex.h
crates/apfs-fastindex/src/: block_io.rs  btree.rs  cache.rs  container.rs  crypto_meta.rs  diag.rs  ext_summary.rs  extent_ref.rs  fallback.rs  fallback_bulk.rs  ffi.rs  fs_record_body.rs  fs_records.rs  lib.rs  main.rs  namespace.rs  object.rs  omap.rs  parity.rs  render.rs  snapshots.rs  tree.rs  volume.rs
crates/apfs-fastindex/tests/: admin_mode_ffi.rs  diag_ffi.rs  ex28_live_parity.rs  ex29_snapshot_enumeration.rs
docs/: auto-update-setup.md  brew-tap-setup.md
docs/implementation/: 000-implementation-index.md  measurement-baseline.md  narrow-v1-proof-parser-skeleton.md  rust-checkpoint-scanner.md  viz-perf-study.md
docs/manual/: apfs-fastindex-manual.tex
docs/manual/_minted/: 43149476A95C9631E63C5156EBC53E79.highlight.minted  50764FC692127FE3336E0B7630A87ADA.highlight.minted  92C2F6F0C257FF1D9867F5DB132B555E.highlight.minted  9A80F3E61E5349E5D0D6E4AAFBBA9FC3.highlight.minted  _D05464669CB236B6234E3CAABAE7DA7D.index.minted
docs/manual/_minted-apfs-fastindex-manual/: 2807E85CEFA29C4C57313D6678FF082383EBEE49AE46D023930322B8C581A543.pygtex  507BB8AEB284B672B5387FE063B2A2FAFF9C65D699CDFC46300544C259576843.pygtex  57148ABBA9885E33888D41AEB6F5A98B83EBEE49AE46D023930322B8C581A543.pygtex  8025CC9B740DD583B26738CE238B812AFFCCADB838F2FBA1CECB2161CFE49B3C.pygtex
docs/manual/chapters/: 00-preface.tex  01-problem-and-scope.tex  01-problem.tex  02-method.tex  02-research-method.tex  03-container.tex  (+20 more)
docs/research/: 000-research-index.md  001-research-template.md  002-source-review-template.md  003-experiment-template.md  RL-01-checkpoint-selection-and-consistency.md  RL-02-omap-and-object-resolution.md  RL-03-fs-tree-topology-and-required-records.md  RL-04-node-identity-cache-keys-and-oid-reuse.md  RL-05-subtree-reuse-correctness.md  RL-06-namespace-reconstruction.md  RL-07-size-and-space-accounting.md  RL-08-live-volume-encryption-and-read-path.md  RL-09-cache-persistence-and-invalidation.md  RL-10-validation-corpus-and-oracle.md  RL-11-snapshots-volume-groups-and-firmlinks.md  RL-12-performance-model-and-optimization.md  RL-13-format-drift-compatibility-and-fallback.md
src/apfs_fastindex/: __init__.py  aggregate.py  bench.py  cli.py  fallback_traversal.py  fs_records.py  models.py  oracle_diff.py  parser.py  poc_fixture.py  poc_regression.py  proof_backend.py  resolver.py  rust_mwp_smoke.py  scan_state.py  source_gate.py
viz/: README.md  index.html
(+420 files in other folders)
