[workspace]
members = ["crates/apfs-fastindex"]
resolver = "2"

# Abort on panic instead of unwinding. The crate is consumed by
# the SwiftUI app via a C ABI (`crates/apfs-fastindex/src/ffi.rs`);
# any Rust panic that unwinds across that boundary is undefined
# behavior in the Swift caller. Every `#[no_mangle] extern "C" fn`
# is additionally wrapped in `catch_unwind` (belt-and-braces:
# `catch_unwind` is a guarantee at the source level,
# `panic = "abort"` is the release-profile-wide backstop).
#
# Side effect: cleans up code size and link time by removing the
# unwinding tables; debug builds keep unwind so test failures
# print backtraces.
[profile.release]
panic = "abort"
