[package]
name = "apfs-fastindex"
version = "0.1.0"
edition = "2021"
description = "Fail-closed APFS checkpoint scanner for detached sources"

[lib]
name = "apfs_fastindex"
path = "src/lib.rs"

[[bin]]
name = "apfs-fastindex-scan"
path = "src/main.rs"

[dependencies]
plist = "1.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# MessagePack output for the viz integration. Keyed maps (named
# fields) produce a payload shape that's a 1:1 swap for the JSON
# encoding, just ~3× smaller on the wire and ~3-6× faster to
# decode in WebKit. See docs/implementation/viz-perf-study.md
# Lever B.
rmp-serde = "1.3"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
